--- a/index.html
+++ b/index.html
@@ -1153,10 +1153,10 @@ const totalPatients = document.getElementById('totalPatients').textContent.trim(
     });
 
     const resumen = 
-`${patientText} ${totalPatients} pacientes
-
-${methaneResumen}Incidente: ${incidente}
+`${methaneResumen}Incidente: ${incidente}
 Dirección: ${direccion}
+
+${patientText} ${totalPatients} pacientes
 
 Pacientes:
 - Total ${parseInt(atendidos) + parseInt(trasladados)}
