--- a/index.html
+++ b/index.html
@@ -1124,10 +1124,10 @@ const totalPatients = document.getElementById('totalPatients').textContent.trim(
     });
 
     const resumen = 
-`${methaneResumen}Incidente: ${incidente}
-Dirección: ${direccion}
+`${methaneResumen}*Incidente: ${incidente}*
+*Dirección: ${direccion}*
 
-${patientText} ${totalPatients} pacientes
+*${patientText} ${totalPatients} pacientes*
 
 Pacientes:
 - Total ${parseInt(atendidos) + parseInt(trasladados)}
