--- a/index.html
+++ b/index.html
@@ -1134,13 +1134,11 @@ Pacientes:
 - Óbitos: ${obitosTotal}
 
 Sexo:
-- Masculino: ${masculino}
-- Femenino: ${femenino}
+- Masculino: ${masculino} | Femenino: ${femenino}
 - S/D: ${sexoSD}
 
 Edad:
-- Menores: ${menores}
-- Mayores: ${mayores}
+- Menores: ${menores} | Mayores: ${mayores}
 - S/D: ${edadSD}
 
 Procedimiento:
@@ -1150,8 +1148,7 @@ Destino traslados (hospitales):
 ${hospitalesResumen}
 
 Dotación:
-- Móviles: ${moviles}
-- Aéreo: ${aereo}
+- Móviles: ${moviles} | Aéreo: ${aereo}
 
 Intervención:
 ${intervencion}
