--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             transition: background 0.3s ease, color 0.3s ease;
         }
 
-        /* MODO NOTURNO */
+        /* MODO nocturno */
         body.dark-mode {
             background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
             color: #e0e0e0;
@@ -558,7 +558,7 @@
             color: #e0e0e0;
         }
 
-        /* Botão Modo Noturno */
+        /* Botão Modo nocturno */
         #darkModeBtn {
             position: fixed;
             top: 180px;
@@ -627,7 +627,7 @@
         Enviar WhatsApp
     </button>
 
-    <button id="darkModeBtn" title="Alternar modo noturno" aria-label="Alternar modo noturno">
+    <button id="darkModeBtn" title="Alternar modo nocturno" aria-label="Alternar modo nocturno">
         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16" class="moon-icon">
             <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/>
         </svg>
@@ -1511,7 +1511,7 @@ document.addEventListener("DOMContentLoaded", () => {
                     localStorage.setItem("darkMode", "disabled");
                     moonIcon.style.display = "inline";
                     sunIcon.style.display = "none";
-                    darkModeBtn.innerHTML = moonIcon.outerHTML + " Modo Noturno";
+                    darkModeBtn.innerHTML = moonIcon.outerHTML + " Modo nocturno";
                 }
             });
         });
