--- a/index.html
+++ b/index.html
@@ -606,6 +606,24 @@
                 padding: 8px 12px;
             }
         }
+
+.two-columns {
+    display: flex;
+    gap: 24px;
+    align-items: flex-start;
+}
+
+/* cada cartão ocupa metade */
+.two-columns > .section {
+    flex: 1;
+}
+
+/* responsivo (mobile) */
+@media (max-width: 768px) {
+    .two-columns {
+        flex-direction: column;
+    }
+}
         
     </style>
 </head>
@@ -788,68 +806,110 @@
                 </div>
             </div>
 
-            <!-- Sexo -->
-            <div class="section">
-                <div class="section-title">Sexo</div>
-                <div class="counter-group">
-                    <div class="counter-item">
-                        <div class="counter-label">Masculino</div>
-                        <div class="counter-controls">
-                            <button class="counter-btn minus" onclick="redistributeFromSD('masculino', -1)">−</button>
-                            <span class="counter-value" id="masculino">0</span>
-                            <button class="counter-btn plus" onclick="redistributeFromSD('masculino', 1)">+</button>
-                        </div>
-                    </div>
-                    <div class="counter-item">
-                        <div class="counter-label">Femenino</div>
-                        <div class="counter-controls">
-                            <button class="counter-btn minus" onclick="redistributeFromSD('femenino', -1)">−</button>
-                            <span class="counter-value" id="femenino">0</span>
-                            <button class="counter-btn plus" onclick="redistributeFromSD('femenino', 1)">+</button>
-                        </div>
-                    </div>
-                    <div class="counter-item" id="sexoSD-item">
-                        <div class="counter-label">S/D</div>
-                        <div class="counter-controls">
-                            <button class="counter-btn minus" onclick="redistributeToSD('sexoSD', -1)">−</button>
-                            <span class="counter-value" id="sexoSD">0</span>
-                            <button class="counter-btn plus" onclick="redistributeToSD('sexoSD', 1)">+</button>
-                        </div>
-                    </div>
+<div class="two-columns">
+
+    <!-- Sexo -->
+    <div class="section">
+        <div class="section-title">Sexo</div>
+        <div class="counter-group">
+            <div class="counter-item">
+                <div class="counter-label">Masculino</div>
+                <div class="counter-controls">
+                    <button class="counter-btn minus" onclick="redistributeFromSD('masculino', -1)">−</button>
+                    <span class="counter-value" id="masculino">0</span>
+                    <button class="counter-btn plus" onclick="redistributeFromSD('masculino', 1)">+</button>
                 </div>
             </div>
 
-            <!-- Edad -->
-            <div class="section">
-                <div class="section-title">Edad</div>
-                <div class="counter-group">
-                    <div class="counter-item">
-                        <div class="counter-label">Menores</div>
-                        <div class="counter-controls">
-                            <button class="counter-btn minus" onclick="redistributeFromSD('menores', -1)">−</button>
-                            <span class="counter-value" id="menores">0</span>
-                            <button class="counter-btn plus" onclick="redistributeFromSD('menores', 1)">+</button>
-                        </div>
-                    </div>
-                    <div class="counter-item">
-                        <div class="counter-label">Mayores</div>
-                        <div class="counter-controls">
-                            <button class="counter-btn minus" onclick="redistributeFromSD('mayores', -1)">−</button>
-                            <span class="counter-value" id="mayores">0</span>
-                            <button class="counter-btn plus" onclick="redistributeFromSD('mayores', 1)">+</button>
-                        </div>
-                    </div>
-                    <div class="counter-item" id="edadSD-item">
-                        <div class="counter-label">S/D</div>
-                        <div class="counter-controls">
-                            <button class="counter-btn minus" onclick="redistributeToSD('edadSD', -1)">−</button>
-                            <span class="counter-value" id="edadSD">0</span>
-                            <button class="counter-btn plus" onclick="redistributeToSD('edadSD', 1)">+</button>
-                        </div>
-                    </div>
+            <div class="counter-item">
+                <div class="counter-label">Femenino</div>
+                <div class="counter-controls">
+                    <button class="counter-btn minus" onclick="redistributeFromSD('femenino', -1)">−</button>
+                    <span class="counter-value" id="femenino">0</span>
+                    <button class="counter-btn plus" onclick="redistributeFromSD('femenino', 1)">+</button>
                 </div>
             </div>
 
+            <div class="counter-item" id="sexoSD-item">
+                <div class="counter-label">S/D</div>
+                <div class="counter-controls">
+                    <button class="counter-btn minus" onclick="redistributeToSD('sexoSD', -1)">−</button>
+                    <span class="counter-value" id="sexoSD">0</span>
+                    <button class="counter-btn plus" onclick="redistributeToSD('sexoSD', 1)">+</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<div class="two-columns">
+
+    <!-- Sexo -->
+    <div class="section">
+        <div class="section-title">Sexo</div>
+        <div class="counter-group">
+            <div class="counter-item">
+                <div class="counter-label">Masculino</div>
+                <div class="counter-controls">
+                    <button class="counter-btn minus" onclick="redistributeFromSD('masculino', -1)">−</button>
+                    <span class="counter-value" id="masculino">0</span>
+                    <button class="counter-btn plus" onclick="redistributeFromSD('masculino', 1)">+</button>
+                </div>
+            </div>
+
+            <div class="counter-item">
+                <div class="counter-label">Femenino</div>
+                <div class="counter-controls">
+                    <button class="counter-btn minus" onclick="redistributeFromSD('femenino', -1)">−</button>
+                    <span class="counter-value" id="femenino">0</span>
+                    <button class="counter-btn plus" onclick="redistributeFromSD('femenino', 1)">+</button>
+                </div>
+            </div>
+
+            <div class="counter-item" id="sexoSD-item">
+                <div class="counter-label">S/D</div>
+                <div class="counter-controls">
+                    <button class="counter-btn minus" onclick="redistributeToSD('sexoSD', -1)">−</button>
+                    <span class="counter-value" id="sexoSD">0</span>
+                    <button class="counter-btn plus" onclick="redistributeToSD('sexoSD', 1)">+</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edad -->
+    <div class="section">
+        <div class="section-title">Edad</div>
+        <div class="counter-group">
+            <div class="counter-item">
+                <div class="counter-label">Menores</div>
+                <div class="counter-controls">
+                    <button class="counter-btn minus" onclick="redistributeFromSD('menores', -1)">−</button>
+                    <span class="counter-value" id="menores">0</span>
+                    <button class="counter-btn plus" onclick="redistributeFromSD('menores', 1)">+</button>
+                </div>
+            </div>
+
+            <div class="counter-item">
+                <div class="counter-label">Mayores</div>
+                <div class="counter-controls">
+                    <button class="counter-btn minus" onclick="redistributeFromSD('mayores', -1)">−</button>
+                    <span class="counter-value" id="mayores">0</span>
+                    <button class="counter-btn plus" onclick="redistributeFromSD('mayores', 1)">+</button>
+                </div>
+            </div>
+
+            <div class="counter-item" id="edadSD-item">
+                <div class="counter-label">S/D</div>
+                <div class="counter-controls">
+                    <button class="counter-btn minus" onclick="redistributeToSD('edadSD', -1)">−</button>
+                    <span class="counter-value" id="edadSD">0</span>
+                    <button class="counter-btn plus" onclick="redistributeToSD('edadSD', 1)">+</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
                       <!-- Dotación -->
             <div class="section">
                 <div class="section-title">Dotación</div>
