--- a/index.html
+++ b/index.html
@@ -938,17 +938,22 @@
                 <button class="add-hospital-btn" onclick="addHospitalRow()">+ Agregar otro destino</button>
             </div>
 
-            <!-- Intervención -->
-            <div class="section">
-                <div class="section-title">Intervención</div>
-                <textarea class="textarea-field" id="intervencion" placeholder="Datos adicionales..."></textarea>
-            </div>
+<div class="two-columns">
+    <!-- Intervención -->
+    <div class="section">
+        <div class="section-title">Intervención</div>
+        <textarea class="textarea-field" id="intervencion"
+            placeholder="Datos adicionales..."></textarea>
+    </div>
 
-            <!-- Notas -->
-            <div class="section">
-                <div class="section-title">Notas</div>
-                <textarea class="textarea-field" id="notas" placeholder="Notas adicionales sobre el incidente..."></textarea>
-            </div>
+    <!-- Notas -->
+    <div class="section">
+        <div class="section-title">Notas</div>
+        <textarea class="textarea-field" id="notas"
+            placeholder="Notas adicionales sobre el incidente..."></textarea>
+    </div>
+
+</div>
         </div>
     </div>
 
