Update textarea placeholder text for intervention

--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
     <div class="section">
         <div class="section-title">Intervención</div>
         <textarea class="textarea-field" id="intervencion"
-            placeholder="Datos adicionales..."></textarea>
+            placeholder="Datos de la intervención..."></textarea>
     </div>
 
     <!-- Notas -->
