--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <link rel="manifest" href="manifest.json" />
 <meta name="theme-color" content="#4CAF50" />
+<link rel="icon" type="image/png" href="icon-192.png">
 
 <link rel="apple-touch-icon" href="icon-192.png" />
 <!-- Permite que o app abra em tela cheia -->
