--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.77, maximum-scale=0.77, user-scalable=no">
-    <title>Contador Digital ECUES</title>
+    <title>ECUES Counter</title>
     <style>
         * {
             margin: 0;
