Simplify patient statistics display in index.html

--- a/index.html
+++ b/index.html
@@ -1402,15 +1402,14 @@ if (parseInt(count) > 0) {
 
 Pacientes:
 - Total ${parseInt(atendidos) + parseInt(trasladados)}
-- Óbitos: ${obitosTotal} | Evacuados: ${evacuadosTotal}
+- Óbitos: ${obitosTotal}
+- Evacuados: ${evacuadosTotal}
 
 Sexo:
-- Masculino: ${masculino} | Femenino: ${femenino}
-- S/D: ${sexoSD}
+- Mas: ${masculino} | Fem: ${femenino} | S/D: ${sexoSD}
 
 Edad:
-- Menores: ${menores} | Mayores: ${mayores}
-- S/D: ${edadSD}
+- Men: ${menores} | May: ${mayores} | S/D: ${edadSD}
 
 Procedimiento:
 - Atendidos en el lugar: ${atendidos}
