Fix formatting for patient information display

--- a/index.html
+++ b/index.html
@@ -1400,8 +1400,8 @@ if (parseInt(count) > 0) {
 
 *${patientText} ${totalPatients} pacientes*
 
-Pacientes:
-- Total ${parseInt(atendidos) + parseInt(trasladados)}
+Información General:
+- Pacientes: ${parseInt(atendidos) + parseInt(trasladados)}
 - Óbitos: ${obitosTotal}
 - Evacuados: ${evacuadosTotal}
 
