--- a/index.html
+++ b/index.html
@@ -1401,9 +1401,9 @@ if (parseInt(count) > 0) {
 *${patientText} ${totalPatients} pacientes*
 
 Información General:
-- Pacientes: ${parseInt(atendidos) + parseInt(trasladados)}
 - Óbitos: ${obitosTotal}
 - Evacuados: ${evacuadosTotal}
+- Pacientes: ${parseInt(atendidos) + parseInt(trasladados)}
 
 Sexo:
 - Mas: ${masculino} | Fem: ${femenino} | S/D: ${sexoSD}
@@ -1414,8 +1414,7 @@ Edad:
 Procedimiento:
 - Atendidos en el lugar: ${atendidos}
 - Trasladados: ${trasladados}
-Destino traslados (hospitales):
-${hospitalesResumen}
+Destino traslados (hospitales): ${hospitalesResumen}
 
 Dotación:
 - Móviles: ${moviles} | Aéreo: ${aereo}
