--- a/index.html
+++ b/index.html
@@ -1280,10 +1280,10 @@ document.addEventListener("change", function (e) {
 
         // Botão RESET funcionalidade
         document.getElementById('resetBtn').addEventListener('click', () => {
-            if (confirm('Tem certeza que deseja reiniciar todos os dados e começar do zero?')) {
+            if (confirm('Está seguro que desea reiniciar todos los datos?')) {
                 resetAllCategories();
                 updateTotalPatients(); // Atualiza o total de pacientes exibido no cabeçalho
-                showInfoAlert('Aplicativo reiniciado.');
+                showInfoAlert('Aplicación reiniciada.');
             }
         });
 
