--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
             <div class="patient-counter">
   <span id="patientText">Hasta ahora</span> <span id="totalPatients">0</span> pacientes
   <br />
-  <button id="togglePatientTextBtn" style="margin-top: 8px; padding: 6px 12px; font-size: 14px; cursor: pointer; border-radius: 6px; border: none; background-color: #4CAF50; color: white;">
+  <button id="togglePatientTextBtn" style="margin-top: 8px; padding: 6px 12px; font-size: 14px; cursor: pointer; border-radius: 6px; border: none; background-color: #ff5722; color: white;">
     FINAL
   </button>
 </div>
