--- a/index.html
+++ b/index.html
@@ -1421,9 +1421,9 @@ if (parseInt(count) > 0) {
 *${patientText} ${totalPatients} pacientes*
 
 Información General:
+- Pacientes: ${parseInt(atendidos) + parseInt(trasladados)}
 - Óbitos: ${obitosTotal}
 - Evacuados: ${evacuadosTotal}
-- Pacientes: ${parseInt(atendidos) + parseInt(trasladados)}
 
 Sexo:
 - Mas: ${masculino} | Fem: ${femenino} | S/D: ${sexoSD}
@@ -1434,7 +1434,7 @@ Edad:
 Procedimiento:
 - Atendidos en el lugar: ${atendidos}
 - Trasladados: ${trasladados}
-Destino traslados (hospitales):
+→ Destino traslados (hospitales):
 ${hospitalesResumen}
 
 Dotación:
