Fix variable name for evacuados inputs loop

--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,7 @@ if (parseInt(count) > 0) {
     });
     const evacuadosInputs = document.querySelectorAll('#evacuadosContainer input');
     let evacuadosTotal = 0;
-    evacuadoInputs.forEach(input => {
+    evacuadosInputs.forEach(input => {
     evacuadosTotal += parseInt(input.value) || 0;
 });
 
