--- a/index.html
+++ b/index.html
@@ -1408,7 +1408,7 @@ if (parseInt(count) > 0) {
     obitoInputs.forEach(input => {
         obitosTotal += parseInt(input.value) || 0;
     });
-    const evacuadosInputs = document.querySelectorAll('#evacuadosContainer input');
+    const evacuadosInputs = document.querySelectorAll('#EvacuadosContainer input');
     let evacuadosTotal = 0;
     evacuadosInputs.forEach(input => {
     evacuadosTotal += parseInt(input.value) || 0;
