--- a/index.html
+++ b/index.html
@@ -1395,7 +1395,7 @@ if (parseInt(count) > 0) {
         nombre = select.value;
     }
 
-    hospitalesResumen += `- ${nombre}: ${count}`;
+    hospitalesResumen += `- ${nombre}: ${count}\n`;
 }
     });
     if (!hospitalesResumen) hospitalesResumen = 'S/D';
